# gen.parRep

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  parRep.doxy
ci/: .gitignore  README.md  input_generalized_parRep.lua  run.ci.sh
ci/lj7/: Integrator.xml  State.xml  System.xml  omm_LJ7.py
ci/ref.sim/: README.md  lj7.db
cmake/: FindOpenMM.cmake
include/: global.hpp  logger.hpp  rand.hpp
include/dyna/: GelmanRubin.hpp  observable.hpp  parRep.hpp  parRep_FV.hpp  parRep_FV_multiExits.hpp  parRep_abstract.hpp  runSim.hpp
include/md/: md_interface.hpp  omm_interface.hpp
include/utils/: lua_interface.hpp  mpi_utils.hpp
mol/1d7h_i/: 1d7h_i.inpcrd  1d7h_i.prmtop  Integrator.xml  State.xml  System.xml  input_generalized_parRep.lua  prep.py  run.py
mol/ala2vac/: Integrator.xml  State.xml  System.xml  input_generalized_parRep.lua  input_generalized_parRep_multiExit.lua  input_parRep.lua  prep.py
mol/ala2vac_transient/: A.psf  Integrator.xml  input_generalized_parRep.lua  input_parRep.lua
run/: debug.sh  run.bash.sh  run.scalasca.sh  run.slurm.sh  valgrind.sh
src/: logger.cpp  main.cpp  rand.cpp
src/dyna/: GelmanRubin.cpp  observable.cpp  parRep.cpp  parRep_FV.cpp  parRep_FV_multiExits.cpp  runSim.cpp
src/md/: md_interface.cpp  omm_interface.cpp
src/utils/: lua_interface.cpp  mpi_utils.cpp
